--- a/app/src/main/res/layout/guideview_left.xml
+++ b/app/src/main/res/layout/guideview_left.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
+    android:layout_width="match_parent"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_rect"
+    android:background="@color/colorAccent"
     android:orientation="vertical"
     android:paddingTop="15dp">
 
