--- a/lib/src/main/res/values/attrs.xml
+++ b/lib/src/main/res/values/attrs.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="GuideViewDialogStyle" parent="@style/Base.Theme.AppCompat.Light.Dialog">
-        <item name="android:backgroundDimEnabled">false</item>
+<!--        <item name="android:backgroundDimEnabled">false</item>-->
+<!--        <item name="android:windowMinWidthMajor">100%</item>-->
+<!--        <item name="android:windowMinWidthMinor">100%</item>-->
+<!--        <item name="android:layout_width">match_parent</item>-->
+<!--        <item name="android:windowIsFloating">false</item>-->
+<!--        <item name="windowNoTitle">true</item>-->
+<!--        <item name="android:padding">0dp</item>-->
+
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.5</item>
     </style>
 </resources>
