--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="more"
         app:showAsAction="always"
+        android:icon="@mipmap/ic_launcher"
         android:id="@+id/menuMore"/>
 </menu>
