--- a/lib/src/main/res/layout/layout_guide_container.xml
+++ b/lib/src/main/res/layout/layout_guide_container.xml
@@ -3,5 +3,5 @@
     android:id="@+id/fl_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     android:orientation="vertical" />
